@@ -5,6 +5,7 @@ import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.ImmutableSortedSet;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
+import com.google.common.collect.Streams;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
@@ -19,7 +20,7 @@ import tech.picnic.errorprone.refaster.test.RefasterRuleCollectionTestCase;
 final class CollectionRulesTest implements RefasterRuleCollectionTestCase {
   @Override
   public ImmutableSet<Object> elidedTypesAndStaticImports() {
-    return ImmutableSet.of(Iterables.class, Lists.class);
+    return ImmutableSet.of(Iterables.class, Lists.class, Streams.class);
   }
 
   ImmutableSet<Boolean> testCollectionIsEmpty() {
@@ -130,14 +131,18 @@ final class CollectionRulesTest implements RefasterRuleCollectionTestCase {
         ImmutableSet.of(1).isEmpty()
             ? Optional.empty()
             : Optional.of(ImmutableSet.of(1).iterator().next()),
-        ImmutableList.of(2).isEmpty() ? Optional.empty() : Optional.of(ImmutableList.of(2).get(0)),
+        ImmutableList.of(2).isEmpty()
+            ? Optional.empty()
+            : Optional.of(ImmutableList.of(2).getFirst()),
         ImmutableSortedSet.of(3).isEmpty()
             ? Optional.empty()
             : Optional.of(ImmutableSortedSet.of(3).first()),
         !ImmutableSet.of(1).isEmpty()
             ? Optional.of(ImmutableSet.of(1).iterator().next())
             : Optional.empty(),
-        !ImmutableList.of(2).isEmpty() ? Optional.of(ImmutableList.of(2).get(0)) : Optional.empty(),
+        !ImmutableList.of(2).isEmpty()
+            ? Optional.of(ImmutableList.of(2).getFirst())
+            : Optional.empty(),
         !ImmutableSortedSet.of(3).isEmpty()
             ? Optional.of(ImmutableSortedSet.of(3).first())
             : Optional.empty());
@@ -206,5 +211,46 @@ final class CollectionRulesTest implements RefasterRuleCollectionTestCase {
 
   void testCollectionForEach() {
     ImmutableSet.of(1).stream().forEach(String::valueOf);
+  }
+
+  String testCollectionIteratorNext() {
+    return ImmutableSet.of("foo").stream().findFirst().orElseThrow();
+  }
+
+  ImmutableSet<String> testSequencedCollectionGetFirst() {
+    return ImmutableSet.of(
+        ImmutableList.of("foo").iterator().next(), ImmutableList.of("bar").get(0));
+  }
+
+  ImmutableSet<String> testSequencedCollectionGetLast() {
+    return ImmutableSet.of(
+        ImmutableList.of("foo").reversed().getFirst(),
+        Streams.findLast(ImmutableList.of("bar").stream()).orElseThrow(),
+        ImmutableList.of("baz").get(ImmutableList.of("baz").size() - 1));
+  }
+
+  void testListAddFirst() {
+    new ArrayList<String>().add(0, "foo");
+  }
+
+  void testListAdd() {
+    new ArrayList<String>(0).addLast("bar");
+    new ArrayList<String>(1).add(new ArrayList<String>(1).size(), "qux");
+  }
+
+  String testListRemoveFirst() {
+    return new ArrayList<String>().remove(0);
+  }
+
+  String testListRemoveLast() {
+    return new ArrayList<String>().remove(new ArrayList<String>().size() - 1);
+  }
+
+  String testSortedSetFirst() {
+    return ImmutableSortedSet.of("foo").getFirst();
+  }
+
+  String testSortedSetLast() {
+    return ImmutableSortedSet.of("foo").getLast();
   }
 }
